<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <Button
        android:id="@+id/btnUnitTesting"
        android:layout_width="249dp"
        android:layout_height="155dp"
        android:layout_marginTop="112dp"
        android:text="Unit Testing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInstrumentedTesting"
        android:layout_width="249dp"
        android:layout_height="155dp"
        android:layout_marginTop="116dp"
        android:text="Instrumented Testing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUnitTesting" />
</androidx.constraintlayout.widget.ConstraintLayout>