<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:background="#FFFF00"
    tools:context=".fragment.MultiplyFragment">

    <EditText
        android:id="@+id/etFirstM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter first number" />

    <EditText
        android:id="@+id/etSecondM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter second number" />

    <Button
        android:id="@+id/btnMultiplyM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Multiply" />

    <TextView
        android:id="@+id/tvResultM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>